--- a/style.css
+++ b/style.css
@@ -3,3 +3,37 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header {
+  text-align: center;
+}
+
+section img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+figure figcaption {
+  font-size: small;
+  text-align: center;
+}
+
+nav a {
+  padding: 0 10px 0 10px;
+  background-color: #dadedf;
+}
+
+#featured-property p {
+  text-align: center;
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+div {
+  float: left;
+  text-align: center;
+  background-color: #c1c7c9;
+  width: 25%;
+}
